# ivm-engine

./: .gitignore  Cargo.toml  README.md  verify_all.ps1  verify_all.sh
crates/api/: Cargo.toml
crates/api/src/: handlers.rs  main.rs  metrics_handler.rs  sql_handlers.rs  state.rs
crates/connectors/: Cargo.toml
crates/connectors/delta_lake/: Cargo.toml
crates/connectors/delta_lake/src/: lib.rs
crates/connectors/kafka_cdc/: Cargo.toml
crates/connectors/kafka_cdc/src/: kafka_impl.rs  lib.rs
crates/connectors/pg_wal/: Cargo.toml
crates/connectors/pg_wal/src/: lib.rs  stream_connector.rs  streaming.rs
crates/connectors/snapshot/: Cargo.toml
crates/connectors/snapshot/src/: lib.rs
crates/connectors/src/: connector_state.rs  lib.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/formats/avro/: Cargo.toml
crates/formats/avro/src/: lib.rs
crates/formats/parquet/: Cargo.toml
crates/formats/parquet/src/: lib.rs
crates/formats/proto/: Cargo.toml
crates/formats/proto/src/: lib.rs
crates/operators/: Cargo.toml
crates/operators/benches/: engine_bench.rs
crates/operators/src/: aggregate.rs  filter.rs  join.rs  lib.rs  map.rs  union.rs
crates/planner/: Cargo.toml
crates/planner/src/: display.rs  executor.rs  lib.rs  logical_plan.rs  parser.rs
crates/planner/tests/: planner_tests.rs
crates/runtime/: Cargo.toml
crates/runtime/src/: checkpoint.rs  lib.rs  metrics.rs  pipeline.rs  scheduler.rs
docker/: Dockerfile  docker-compose.yml  postgres-init.sql  prometheus.yml
docker/grafana/provisioning/dashboards/: dashboard.yml  ivm_dashboard.json
docker/k8s/: deployment.yaml  pipeline-crd.yaml
examples/sql_demo/: Cargo.toml
examples/sql_demo/src/: main.rs
examples/word_count/: Cargo.toml
examples/word_count/src/: main.rs
scripts/: demo_recovery.sh  recovery.tape
tests/integration/: Cargo.toml
tests/integration/src/: lib.rs
tests/integration/tests/: kafka_cdc_test.rs  pg_wal_test.rs  recovery_test.rs
