[package]
name = "ivm-api"
version.workspace = true
edition.workspace = true

[[bin]]
name = "ivm-api"
path = "src/main.rs"

[features]
default = []
kafka = ["ivm-runtime/kafka"]

[dependencies]
ivm-runtime = { path = "../runtime" }
ivm-planner = { path = "../planner" }
ivm-core = { path = "../core" }
ivm-operators = { path = "../operators" }
axum = "0.7"
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
prometheus = { version = "0.13", features = ["process"] }
