[package]
name = "ivm-avro"
version.workspace = true
edition.workspace = true

[dependencies]
ivm-core = { path = "../../core" }
apache-avro = "0.16"
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
reqwest = { version = "0.12", features = ["json"] }
