[package]
name = "ivm-parquet"
version.workspace = true
edition.workspace = true

[dependencies]
ivm-core = { path = "../../core" }
parquet = { version = "48", features = ["arrow", "snap"] }
arrow-array = "48"
arrow-schema = "48"
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
